# brr

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.brr/: config.env  setup.sh
.brr/aws/: cluster.yaml  dev.yaml  setup.sh
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml
brr/: cli.py  cluster.py  github.py  providers.py  ssh.py  state.py  templates.py  update.py  utils.py
brr/aws/: configure.py  iam-policy.json  nodes.py  provider.py
brr/aws/templates/: cpu-l4.yaml  cpu.yaml  h100.yaml  l4.yaml
brr/commands/: bake.py  config.py  configure.py  init.py  nuke.py
brr/data/: idle-shutdown.sh  setup.sh  sync-repo.sh
brr/nebius/: configure.py  node_provider.py  nodes.py  provider.py
brr/nebius/templates/: cpu-h100.yaml  cpu-h100s.yaml  cpu.yaml  h100.yaml  h200.yaml
brr/verda/: configure.py  node_provider.py  nodes.py  provider.py  tag_store.py
brr/verda/templates/: a100.yaml  cpu.yaml  h100.yaml
docs/: templates.md
tests/: test_git_sync.py
tests/e2e/: autoscale_test.py
