[project]
name = "brr-cli"
version = "0.2.0"
description = "Research infrastructure management tooling."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jon Carter" }]
keywords = ["gpu", "cluster", "ray", "aws", "cloud", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Clustering",
    "Programming Language :: Python :: 3",
]
dependencies = ["click", "pyyaml", "rich", "InquirerPy"]

[project.optional-dependencies]
aws = ["boto3", "ray[default]"]
nebius = ["nebius", "ray[default]"]

[project.urls]
Homepage = "https://github.com/joncarter1/brr"
Repository = "https://github.com/joncarter1/brr"
Issues = "https://github.com/joncarter1/brr/issues"

[project.scripts]
brr = "brr.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["brr"]

[tool.uv.sources]
brr-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
brr = [
    "brr-cli[aws]",
    "ray[default]>=2.53.0",
]
